Noticed that the overflow-x was not hidden in mobile view. This probably has something to do with the carousels. Gave both .content and .wrapper an overflow-x: hidden property. Will see if that fixes the issue.

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 	width: 100%;
 	/* max-width: 51em; */
 	margin: 0 auto; 
+	overflow-x: hidden;
 }
 
 header {
@@ -218,6 +219,7 @@ nav ul {
 	text-align: justify;
 	z-index: 100;
 	display: block;
+	overflow-x: hidden;
 }
 
 .content:nth-child(even) {
